--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -62,6 +62,7 @@
         "ms-dotnettools.csdevkit",
         "ms-dotnettools.csharp",
         "ms-kubernetes-tools.vscode-kubernetes-tools",
+        "ms-playwright.playwright",
         "ms-vscode-remote.remote-containers",
         "ms-vsliveshare.vsliveshare",
         "nopeslide.vscode-drawio-plugin-mermaid",
@@ -70,6 +71,7 @@
         "SimonSiefke.svg-preview",
         "streetsidesoftware.code-spell-checker",
         "Tim-Koehler.helm-intellisense",
+        "vitest.explorer",
         "Vue.volar",
         "yzhang.markdown-all-in-one"
       ]
